--- a/site/static/css/src/index.scss
+++ b/site/static/css/src/index.scss
@@ -69,7 +69,7 @@ body {
 	cursor:pointer;
 	padding:5px 3px 5px 5px;
 	display:flex;
-	flex-direction:row-reverse;
+/*	flex-direction:row-reverse; */
 	justify-content:flex-end;
 	color:black;
 	text-decoration:none;
