--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -11,7 +11,6 @@
 		<!-- External Stylesheets -->
 		<link rel="stylesheet" type="text/css" href="/static/css/index.css" />
 		<!-- End External Stylesheets -->
-
 	</head>
 	<body>
 		<noscript class="noscript-notification">
@@ -36,6 +35,9 @@
 			<form action="/" method="get" class="sub-container side-container" id="js-sidebar-form">
 				<div class="block sources">
 					<div class="header">Sources</div>
+					<x-source-item name="all" label="All"></x-source-item><br/>
+
+					<noscript>
 					<label for="all-check" class="item">
 						<input id="all-check" type="checkbox" name="all" checked>
 						<div class="label-name">All</div>
@@ -64,6 +66,7 @@
 						<input id="washingtonpost-check" type="checkbox" name="washingtonpost" checked>
 						<div class="label-name">Washington Post</div>
 					</label>
+				</noscript>
 				</div>
 
 				<div class="block">
@@ -110,7 +113,7 @@
 						<div class="source"><span class="title-card-label">source: </span>{{ article.source }}</div>
 						<div class="date">
 							<span class="title-card-label">fetched: </span>
-							<span class="js-localize-date" iso="{{ article.fetched.isoformat() }}">{{ article.fetched.strftime('%Y-%m-%d %H:%M:%S %p') }} UTC</span>
+							<span class="js-localize-date">{{ article.fetched.strftime('%Y-%m-%d') }}</span>
 						</div>
 					</div>
 				</div>
@@ -123,6 +126,7 @@
 		</div>
 
 		<!-- External Javascript -->
+		<script src="/static/js/vue.js"></script>
 		<script src="/static/js/index.js"></script>
 		<!-- End External Javascript -->
 	</body>
