--- a/site/static/css/src/index.scss
+++ b/site/static/css/src/index.scss
@@ -50,147 +50,115 @@ body {
 
 .side-container {
 	flex:1;
-}
 
-/* -------------------------------------------------------------------------- */
-/* Sidebar */
-.block {
-	margin-bottom:10px;
-}
+	.block {
+		margin-bottom:10px;
 
-.block>.header {
-	color:black;
-	font-size:1.5em;
-	padding:5px 3px 5px 5px;
-}
+		/* header for each block */
+		.header {
+			color:black;
+			font-size:1.5em;
+			padding:5px 0 5px 0;
+		}
 
-.item {
-	user-select:none;
-	cursor:pointer;
-	padding:5px 3px 5px 5px;
-	display:flex;
-/*	flex-direction:row-reverse; */
-	justify-content:flex-end;
-	color:black;
-	text-decoration:none;
-	transition:background-color 0.1s ease;
-}
+		/* x-option styles*/
+		.options-item {
+			display:block;
+			user-select:none;
+			cursor:pointer;
+			padding:5px 3px 5px 7px;
+			color:black;
+			text-decoration:none;
+			border-right:3px solid rgba(255,5,5,0.35);
+			transition:background-color 0.1s ease, border-right 0.25s ease;
 
-.item>.label-name {
-	width:95%;
-}
+			&:hover {
+				background-color: white;
+			}
+		}
 
-.block>.button {
-	border:none;
-	width:100%;
-	text-align:left;
-}
+		/* checked x-option */
+		.mark {
+			border-right:3px solid green;
+			background-color: rgba(0,0,0,0.05);
+		}
 
-.item, .option {
-	user-select: none;
-}
+		.search-bar, .result-bar, .category-bar {
+			padding:5px 3px 5px 5px;
+			text-align: center;
+		}
 
-.item:hover {
-	background-color: white;
-}
+		.search-input, .count-input, .category-input {
+			padding:3px;
+			border:1px solid lightgrey;
+			width:95%;
 
-.search-bar, .result-bar, .category-bar {
-	padding:5px 3px 5px 5px;
-	text-align: center;
-}
-
-.search-input, .count-input, .category-input {
-	padding:3px;
-	border:1px solid lightgrey;
-	width:95%;
-
-	/* override category-input defaults */
-	background-color: white;
-	border-radius:none;
-}
-
-/* -------------------------------------------------------------------------- */
-/* Checkbox Styles
-*/
-.checkable:not(:checked) + div::after, .checkable:checked + div::after {
-	padding:0;
-	margin:0;
-
-	width: 20px;
-    height: 20px;
-
-	line-height: 18px;
-	text-align: center;
-	font-weight:bold;
-
-	float:right;
-	background-color: white;
-	border-radius: 100px;
-	border: 1px solid lightgrey;
-}
-
-.checkable:not(:checked) + div::after {
-	content:'\2212';
-	color:red;
-}
-
-.checkable:checked + div::after {
-    content: '\002B';
-    color: green;
-}
-/* -------------------------------------------------------------------------- */
-
-.search-options>.option:hover {
-	background-color: white;
-}
-
-
-.submit-button {
-	height:35px;
-	line-height:35px;
-	background-color:#388E3C;
-	color:white;
-	width:100%;
-	text-align:center;
-	font-weight:bold;
-	font-size:1.25em;
-	box-shadow: 2px 2px 5px rgba(0,0,0,0.25);
-	border:none;
-	cursor:pointer;
-	transition: all .2s ease-in-out;
-
-	/* to stop safari from trying to style my buttons */
-	-webkit-appearance:none;
-	-webkit-border-radius:none;
+			/* override category-input defaults */
+			background-color: white;
 			border-radius:none;
+		}
+
+		input[type="submit"] {
+			height:35px;
+			line-height:35px;
+			background-color:#388E3C;
+			color:white;
+			width:100%;
+			text-align:center;
+			font-weight:bold;
+			font-size:1.25em;
+			box-shadow: 2px 2px 5px rgba(0,0,0,0.25);
+			border:none;
+			cursor:pointer;
+			transition: all .2s ease-in-out;
+
+			/* to stop safari from trying to style my buttons */
+			-webkit-appearance:none;
+			-webkit-border-radius:none;
+					border-radius:none;
+
+			&:hover {
+				background-color:#3ea043;
+			}
+		}
+
+		.item {
+			user-select:none;
+			cursor:pointer;
+			display:block;
+			padding:5px 5px 5px 5px;
+			color:black;
+			text-decoration:none;
+			transition:background-color 0.1s ease;
+
+			&:hover {
+				background-color: white;
+			}
+		}
+
+
+	}
 }
 
-.submit-button:hover {
-	background-color:#3ea043;
-}
-/* -------------------------------------------------------------------------- */
-
-/* -------------------------------------------------------------------------- */
-/* Main Container */
-.title-card {
+.titlecard {
 	border-radius:3px;
 	padding:10px;
 	background-color: white;
 	box-shadow: 2px 2px 5px rgba(0,0,0,0.20);
 	margin-bottom:10px;
-}
 
-.title {
-	display:block;
-	color:black;
-	font-size: 1.25em;
-	padding:5px;
-	border:1px dotted transparent;
-	text-decoration:none;
-}
+	.title-link {
+		display:block;
+		color:black;
+		font-size: 1.25em;
+		padding:5px;
+		border:1px dotted transparent;
+		text-decoration:none;
 
-.title:hover {
-	border:1px dotted grey;
+		&:hover {
+			border:1px solid lightgrey;
+		}
+	}
 }
 
 .information {
