--- a/site/static/css/src/article.scss
+++ b/site/static/css/src/article.scss
@@ -7,14 +7,15 @@
 }
 
 .fadelist {
-	min-height:40px;
 	line-height: 40px;
 	color:grey;
 	text-align: center;
-	background-color: white;
 }
 
 .button {
+	border:none;
+	width:100%;
+	text-align:left;
 	background-color: transparent;
 }
 
@@ -23,13 +24,31 @@
 .article {
 	background-color: white;
 
+	@media screen and (max-width: 500px) {
+		padding-top: 8vh;
+	}
+
 	.article-title {
 		font-size:2em;
 		padding:10px;
+
+		@media screen and (max-width: 500px) {
+			word-wrap:break-word;
+		}
 	}
 
 	.article-content {
 		padding:0 10px 0 10px;
+
+		@media screen and (max-width: 500px) {
+			font-size:1.1em;
+		}
+
+		.annotation {
+			@media screen and (max-width: 500px) {
+				user-select:none;
+			}
+		}
 	}
 
 	.article-information {
@@ -44,6 +63,24 @@
 	.highlight {
 		background-color: #fbffaa;
 		cursor:pointer;
+	}
+
+	.information {
+		font-size:0.75em;
+		table-layout: fixed;
+		width:100%;
+
+		$text_color: grey;
+
+		td {
+			color:$text_color;
+			background-color: #f2f2f2;
+			padding:5px 10px 5px 10px;
+		}
+
+		a {
+			color:$text_color;
+		}
 	}
 }
 
