--- a/site/templates/about.html
+++ b/site/templates/about.html
@@ -24,52 +24,33 @@
 		</noscript>
 
 		<div class="container">
-			<div class="mobile-menu">
-				<div id="js-tab-search">
-					Search
+
+			<div class="mobile-menu" id="js-mobile-menu">
+				<div :class="{ current: menu }" v-on:click="toggle">
+					Menu
 				</div>
-				<div id="js-tab-results" class="current">
-					About
+				<div :class="{ current: article }" v-on:click="toggle">
+					Article
 				</div>
 			</div>
-			<form action="/" method="get" class="sub-container side-container" id="js-sidebar-form">
+
+			<form action="/" method="get" class="sub-container side-container" :class="{ open: active }" id="js-sidebar-form">
 				<div class="block sources">
 					<div class="header">Sources</div>
-					<label for="all-check" class="item">
-						<input id="all-check" type="checkbox" name="all" checked>
-						<div class="label-name">All</div>
-					</label>
-					<label for="cnn-check" class="item">
-						<input id="cnn-check" type="checkbox" name="cnn" checked>
-						<div class="label-name">CNN</div>
-					</label>
-					<label for="cnbc-check" class="item">
-						<input id="cnbc-check" type="checkbox" name="cnbc" checked>
-						<div class="label-name">CNBC</div>
-					</label>
-					<label for="foxnews-check" class="item">
-						<input id="foxnews-check" type="checkbox" name="foxnews" checked>
-						<div class="label-name">Fox News</div>
-					</label>
-					<label for="nytimes-check" class="item">
-						<input id="nytimes-check" type="checkbox" name="nytimes" checked>
-						<div class="label-name">New York Times</div>
-					</label>
-					<label for="reuters-check" class="item">
-						<input id="reuters-check" type="checkbox" name="reuters" checked>
-						<div class="label-name">Reuters</div>
-					</label>
-					<label for="washingtonpost-check" class="item">
-						<input id="washingtonpost-check" type="checkbox" name="washingtonpost" checked>
-						<div class="label-name">Washington Post</div>
-					</label>
+					<x-option class="options-item" label="All"	v-on:toggled="set_all" v-on:saveme="save"></x-option>
+					<x-option class="options-item" label="CNN" v-on:toggled="update" v-on:saveme="save"></x-option>
+					<x-option class="options-item" label="CNBC" v-on:toggled="update" v-on:saveme="save"></x-option>
+					<x-option class="options-item" label="Fox News" v-on:toggled="update" v-on:saveme="save"></x-option>
+					<x-option class="options-item" label="New York Times" v-on:toggled="update" v-on:saveme="save"></x-option>
+					<x-option class="options-item" label="Reuters" v-on:toggled="update" v-on:saveme="save"></x-option>
+					<x-option class="options-item" label="Washington Post" v-on:toggled="update" v-on:saveme="save"></x-option>
 				</div>
 
 				<div class="block">
 					<div class="header">Categories</div>
 					<div class ="category-bar">
-						<select name="category" class="category-input" id="js-category-select">
-							<option value="all"></option>
+						<select name="category" class="category-input" v-model="category">
+							<option value="all">All</option>
 							{% for option in categories %}
 							<option value="{{ option|lower }}">{{ option }}</option>
 							{% endfor %}
@@ -80,15 +61,15 @@
 				<div class="block">
 					<div class="header">Search</div>
 					<div class="search-bar">
-						<input class="search-input" id="js-search-input" type="text" name="search" placeholder="Search">
+						<input class="search-input" type="text" name="search" placeholder="Search" v-model="search">
 					</div>
 					<div class="result-bar">
-						<input class="count-input" type="number" placeholder="Results (max 1000)" name="count" id="js-number-input">
+						<input class="count-input" type="number" placeholder="Results (max 1000)" name="count" v-model="count">
 					</div>
 				</div>
 
 				<div class="block">
-					<input type="submit" value="Apply" class="submit-button" id="js-submit-form">
+					<input class="search-submit" type="submit" value="Apply">
 				</div>
 
 				<div class="block">
@@ -100,8 +81,8 @@
 			</form>
 
 			<div class="sub-container main-container about">
-				<div class="about-title">newsbin</div>
-				<div class="about-content">
+				<div class="title">newsbin</div>
+				<div class="content">
 					<p>
 						newsbin pulls articles from hundreds of rss feeds provided by
 						major news outlets, and fetches the articles into a single,
@@ -134,7 +115,7 @@
 						you can take a look at open issues on github, and if you want
 						to contribute, you can send me an email.
 					</p>
-					<p class="about-footer">
+					<p class="footer">
 						<a href="https://github.com/mjhouse/newsbin/issues" target="_blank">Github Issues</a>
 						<a href="mailto:michaelhouse@gmx.us">michaelhouse@gmx.us</a>
 					</p>
@@ -143,11 +124,12 @@
 					</p>
 				</div>
 				<div class="footer">
-					newsbin &copy; {{ date.year }} Michael House
+					newsbin &copy; <span id="js-year"></span> Michael House
 				</div>
 			</div>
 		</div>
 		<!-- External Javascript -->
+		<script src="/static/js/vue.js"></script>
 		<script src="/static/js/index.js"></script>
 		<!-- End External Javascript -->
 	</body>
